# ocv_extract_pngs

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
